--- a/ind.html
+++ b/ind.html
@@ -18,7 +18,7 @@
                 <img src="./images/iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="200" loading="lazy"> 
             </div> 
             <div class="col-lg-6"> 
-                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">meet new and intresting dog near by.</h1>
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet New and Intresting Dog Near By.</h1>
                  <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
                     <button type="button" class="btn btn-dark btn-lg px-4 me-md-2"><svg xmlns="http://www.w3.org/2000/svg" 
                         width="16" height="16" fill="currentColor" class="bi bi-apple mb-1" viewBox="0 0 16 16">
